# evercraft-haskell

./: .gitignore  CharacterTest.hs  README.md  Test.hs  character.hs  character.lhs  evercraft.cabal
src/: EverCraft.hs  EverCraft.lhs  Main.hs
test/: AbilityTests.hs  AttackingTests.hs  CharacterTest.hs  ExperienceTests.hs  Test.hs
